<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text_spesifikasi"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/perhitungan"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/rate_mov_count"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_spec_display_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_spesifikasi"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/text_spec_display_title"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ikhtisar"
        app:layout_constraintStart_toStartOf="@+id/text_spesifikasi"
        app:layout_constraintTop_toBottomOf="@+id/text_spesifikasi"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rate_mov_detail"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_spec_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_spec_display_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_spec_size_title"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/jadwal"
        app:layout_constraintStart_toStartOf="@+id/text_spec_display_title"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display_title"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/release_date_detail"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_spec_size_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/popular"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/popular"
        app:layout_constraintStart_toStartOf="@+id/text_spec_size_title"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_size_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/popular_mov_detail"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_battery_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/popular"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_battery_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/deskripsi"
        app:layout_constraintStart_toStartOf="@+id/popular"
        app:layout_constraintTop_toBottomOf="@+id/popular"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/synopsis_mov_detail"
        android:layout_width="0dp"
        android:layout_height="367dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_battery_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />
</android.support.constraint.ConstraintLayout>